# geocoder-api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main-release.yml
argocd/: argocd-app.yaml
argocd/deployment/: geocoder-api.yaml
deployment/argocd/: argocd-app.yaml
deployment/kubernetes/: geocoder-api.yaml
geocoder_api/: __main__.py  openapi.py  settings.py
geocoder_api/example_code/curl/: geocoding.sh  get_geocoding.sh  get_reverse_geocoding.sh  readiness.sh  reverse_geocoding.sh
geocoder_api/example_code/javascript/: geocoding.js  readiness.js  reverse_geocoding.js
geocoder_api/example_code/python/: geocoding.py  liveness.py  reverse_geocoding.py
geocoder_api/models/: photon.py
geocoder_api/routers/: geocoding.py  healthcheck.py
geocoder_api/tests/: test_healthcheck.py
