[tool.poetry]
name = "geocoder-api"
version = "0.0.1"
description = "API for geocoding and reverse-geocoding"
authors = ["Erik Dymbe <erik.dymbe@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
fastapi-cache2 = "^0.2.1"
py-healthcheck = "^1.10.1"
fastapi = "^0.110.1"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
